# qubit

./: .gitignore  AGENTS.md  AUDIT_ROUND_33_SUMMARY.md  AUDIT_ROUND_34_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  GOAL.md  README.md  ROADMAP.md
.claude/commands/: autoresearch.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: i18n-check.yml  ios.yml  supabase.yml  testflight.yml  ui-tests.yml  web.yml
docs/: API.md  APPLE_WATCH_COMPLICATIONS.md  STAGING.md  ai-training-data.md  android-roadmap.md  api-versioning.md  appstore-metadata.md  deep-links.md  go-nogo-report.md  icloud-sync-setup.md  supabase-cron-setup.md  testflight-notes.md
docs/app-store/: metadata.md  screenshots-spec.md
ios/: .swiftlint.yml  ExportOptions.plist
ios/KQuarks/: Info.plist  KQuarks.entitlements  PrivacyInfo.xcprivacy  iCloudSync.md
ios/KQuarks.xcodeproj/: project.pbxproj
ios/KQuarksTests/: AIInteractionLoggerTests.swift  (+6 more)
rust/quarks-core/: Cargo.toml
rust/quarks-core/src/: crypto.rs  health.rs  lib.rs  nutrition.rs  validation.rs
scripts/: autoresearch-results.tsv  check_localizations.py  code-quality-score.sh  commit_and_push.js  commit_and_push.py  commit_and_push.sh  commit_headless.sh  generate-icons.sh
web/: .env.example  .env.local.example  README.md  bundle-analyzer.config.js  i18n.ts  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts
(+2191 files in other folders)
